cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_18.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_cbc.c:72: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_cbc.c:72:13: Write of unused value
70.               c2l(in, tin0);
71.               tin[0] = tin0;
72.               c2l(in, tin1);
                  ^
73.               tin[1] = tin1;
74.               RC2_decrypt(tin, ks);
